recursion.logo.sierpinski.Sierpinski.scala.error
Compilation error:
Sierpinski:8: error: ')' expected but 'else' found.
  }else{
   ^